test/fail/types_expressions.cvc
#include "civic.h"

export int main() {
    int a = 0;
    a = (5.0 + 7.0);
    return 0;
}
